# clever-operator

./: CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  config.sample.toml
.github/workflows/: ci.yml
deployments/kubernetes/helm/: Chart.yaml  values.yaml
deployments/kubernetes/helm/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  custom-resource-definition.yaml  deployment.yaml  netpol.yaml  poddisruptionbudget.yaml  serviceaccount.yaml
deployments/kubernetes/v1.21.0/: 10-custom-resource-definition.yaml  20-deployment.yaml
deployments/kubernetes/v1.24.0/: 10-custom-resource-definition.yaml  20-deployment.yaml
deployments/kubernetes/v1.30.0/: 10-custom-resource-definition.yaml  20-deployment.yaml
deployments/operator-lifecycle-manager/: README.md  ci.yaml  clever-operator.package.yaml
deployments/operator-lifecycle-manager/0.1.0/: bundle.Dockerfile
deployments/operator-lifecycle-manager/0.1.0/manifests/: clever-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/0.2.0/manifests/: clever-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/0.3.0/manifests/: clever-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/0.3.0/metadata/: annotations.yaml
deployments/operator-lifecycle-manager/0.3.1/: bundle.Dockerfile
deployments/operator-lifecycle-manager/0.3.1/manifests/: clever-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/0.3.2/manifests/: clever-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/0.3.3/manifests/: clever-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/0.3.4/manifests/: clever-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/0.3.5/manifests/: clever-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/0.5.0/manifests/: clever-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/0.5.1/manifests/: clever-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/0.5.3/manifests/: clever-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/0.5.4/manifests/: clever-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.1.0/manifests/: clever-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.2.0/manifests/: clever-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.3.0/manifests/: clever-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.3.1/manifests/: clever-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.3.4/manifests/: clever-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.5.4/manifests/: clever-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.5.5/manifests/: clever-operator-postgresql.crd.yaml
deployments/operator-lifecycle-manager/bundle-0.6.0/manifests/: clever-operator-kv.crd.yaml  clever-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.6.0/tests/scorecard/: config.yaml
deployments/operator-lifecycle-manager/v0.1.0/: Dockerfile
deployments/operator-lifecycle-manager/v0.1.0/manifests/: clever-operator.v0.1.0.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/v0.1.0/metadata/: annotations.yaml
deployments/operator-lifecycle-manager/v0.2.0/manifests/: clever-operator.v0.2.0.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/v0.3.0/manifests/: clever-operator.v0.3.0.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/v0.3.1/: bundle.Dockerfile
deployments/operator-lifecycle-manager/v0.3.1/manifests/: clever-operator.v0.3.1.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/v0.3.2/manifests/: clever-operator.v0.3.2.clusterserviceversion.yaml
docs/: 10-concepts.md  20-set-up-development-environment.md  21-set-up-operator-sdk-development-environment.md  30-telemetry.md  40-custom-resources.md  50-release.md  60-addon-integration.md
examples/kubernetes/: 10-postgresql-addon.yaml  11-redis-addon.yaml  12-mysql-addon.yaml  13-mongodb-addon.yaml  14-pulsar-addon.yaml  15-config-provider-addon.yaml  16-elasticsearch-addon.yaml  17-kv-addon.yaml  18-metabase-addon.yaml  19-keycloak-addon.yaml  20-matomo-addon.yaml  21-otoroshi-addon.yaml  22-azimutt-addon.yaml  23-cellar-addon.yaml
src/: logging.rs  main.rs
src/cmd/: configmap.rs  crd.rs  mod.rs  secret.rs
src/svc/: cfg.rs  mod.rs
src/svc/api/: mod.rs
src/svc/apis/: mod.rs  myself.rs
src/svc/apis/addon/: mod.rs  provider.rs
src/svc/apis/addon/provider/: mod.rs
src/svc/apis/addon/provider/postgresql/: mod.rs  plan.rs
src/svc/apis/myself/: mod.rs
src/svc/clevercloud/: client.rs  ext.rs  mod.rs
src/svc/crd/: azimutt.rs  cellar.rs  config_provider.rs  elasticsearch.rs  keycloak.rs  kv.rs  matomo.rs  metabase.rs  mod.rs  mongodb.rs  mysql.rs  otoroshi.rs  postgresql.rs  pulsar.rs  redis.rs
src/svc/http/: layer.rs  metrics.rs  mod.rs  server.rs
src/svc/k8s/: client.rs  finalizer.rs  mod.rs  resource.rs  secret.rs
src/svc/k8s/addon/: mod.rs  postgresql.rs
src/svc/k8s/recorder/: event.rs  mod.rs
src/svc/telemetry/: metrics.rs  mod.rs
