# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "clever-operator"
description = "A kubernetes operator that expose clever cloud's resources through custom resource definition"
version = "0.6.0"
edition = "2021"
rust-version = "1.84.1"
authors = ["Florentin Dubois <florentin.dubois@clever-cloud.com>"]
license-file = "LICENSE"
repository = "https://github.com/CleverCloud/clever-operator"
readme = "README.md"
keywords = ["kubernetes", "operator", "clevercloud", "openshift"]

[dependencies]
async-trait = "^0.1.86"
axum = { version = "^0.8.1", default-features = false, features = ["http1", "tokio", "tracing", "macros", "original-uri", "matched-path", "json"] }
base64 = "^0.22.1"
chrono = { version = "^0.4.39", default-features = false }
clap = { version = "^4.5.30", features = ["derive"] }
clevercloud-sdk = { version = "^0.12.0", features = ["jsonschemas"] }
config = "^0.15.8"
futures = "^0.3.31"
hostname = "^0.4.0"
json-patch = "^3.0.1"
kube = { version = "^0.98.0", default-features = false, features = [
    "client",
    "rustls-tls",
    "ws",
    "gzip",
    "derive",
    "jsonpatch",
    "runtime",
] }
k8s-openapi = { version = "^0.24.0", default-features = false, features = [
    "v1_30",
] }
mime = { version = "^0.3.17" }
paw = "^1.0.0"
prometheus = { version = "^0.13.4", optional = true }
schemars = { version = "^0.8.21", features = [
    "chrono",
    "indexmap1",
    "uuid1",
    "bytes",
    "url",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "^1.0.138", features = [
    "preserve_order",
    "float_roundtrip",
] }
serde_yaml = "^0.9.33"
tempfile = "^3.17.1"
thiserror = "^2.0.11"
tokio = { version = "^1.43.0", features = ["full"] }
tracing = "^0.1.41"
tracing-subscriber = { version = "^0.3.19", default-features = false, features = ["std", "ansi"] }

[features]
default = [
    "logging",
    "metrics",
    "tracing",
]
logging = [
    "clevercloud-sdk/logging",
]
metrics = ["clevercloud-sdk/metrics", "prometheus"]
tracing = [
    "clevercloud-sdk/tracing",
    "clevercloud-sdk/tokio",
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
